# tv-scraper

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOCUMENTATION_GUIDE.md  GEMINI.md  LICENSE  LOCAL_TESTING.md  MANIFEST.in  Makefile  PUBLISHING.md  README.md  index.html  mkdocs.yml  mkdocs_hooks.py  mkdocs_new.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml  tradingview-scraper_export.md  versions.json
.github/workflows/: docs.yml  gh-pages.yml  publish.yml  pylint.yml  python-app.yml  test.yml
api-conventions/: index.html
architecture/: index.html
beta/: 404.html  index.html  sitemap.xml
beta/api-conventions/: index.html
beta/contributing/: index.html
beta/getting-started/: index.html
beta/getting_cookies/: index.html
beta/search/: search_index.json
beta/streaming/: index.html
beta/supported_data/: index.html
calendar/: index.html
contributing/: index.html
docs/: api-conventions.md  calendar.md  contributing.md  fundamentals.md  getting-started.md  getting_cookies.md  ideas.md  index.md  indicators.md  installation.md  market_movers.md  markets.md  migration-guide.md  minds.md  news.md  overview.md  quick_start.md  realtime.md  screener.md  supported_data.md
docs/assets/: custom.css
docs/reference/: index.md  releases.md
docs/scrapers/: calendar.md  fundamentals.md  ideas.md  market_movers.md  markets.md  minds.md  news.md  options.md  overview.md  pine.md  screener.md  symbol_markets.md  technicals.md
docs/streaming/: base_streamer.md  candle_streamer.md  forecast_streamer.md  index.md  streamer.md
docs_new/: contributing.md  migration-guide.md
docs_new/scrapers/: ideas.md  news.md  screener.md  technicals.md
docs_new/streaming/: index.md  streamer.md
fundamentals/: index.html
getting-started/: index.html
getting_cookies/: index.html
ideas/: index.html
indicators/: index.html
installation/: index.html
latest/: 404.html  index.html  sitemap.xml  versions.json
latest/api-conventions/: index.html
latest/contributing/: index.html
latest/getting-started/: index.html
latest/getting_cookies/: index.html
latest/reference/: index.html
latest/search/: search_index.json
latest/streaming/: index.html
latest/supported_data/: index.html
market_movers/: index.html
markets/: index.html
migration-guide/: index.html
minds/: index.html
news/: index.html
overview/: index.html
plans/: tv-scraper-complete-refactor-plan.md  tv-scraper-phase-1-complete.md  tv-scraper-refactor-complete.md  tv-scraper-refactor-phase-14-complete.md
quick_start/: index.html
realtime/: index.html
scrapers/calendar/: index.html
scrapers/fundamentals/: index.html
scrapers/ideas/: index.html
scrapers/market_movers/: index.html
scrapers/markets/: index.html
scrapers/minds/: index.html
scrapers/news/: index.html
scrapers/options/: index.html
scrapers/overview/: index.html
scrapers/pine/: index.html
scrapers/screener/: index.html
scrapers/symbol_markets/: index.html
scrapers/technicals/: index.html
screener/: index.html
scripts/: verify_news.py
search/: search_index.json
streaming/: index.html
streaming/base_streamer/: index.html
streaming/candle_streamer/: index.html
streaming/forecast_streamer/: index.html
streaming/realtime-price/: index.html
streaming/streamer/: index.html
supported_data/: index.html
tests/: test_minds.py  test_streamer.py  test_utils.py
tests/integration/: __init__.py  test_calendar.py  test_cross_module.py  test_fundamentals.py  test_ideas.py  test_imports.py  (+11 more)
tradingview_scraper/: __init__.py
tv_scraper/: __init__.py
v0.5.0/: 404.html  index.html  sitemap.xml
v0.5.1/: 404.html  index.html  sitemap.xml
v0.5.2/: 404.html  index.html  sitemap.xml
v1.0.0/: 404.html  index.html  sitemap.xml
v1.0.2/: 404.html  index.html  sitemap.xml
v1.0.3/: 404.html  index.html  sitemap.xml
v1.1.0/: 404.html  index.html  sitemap.xml
v1.2.0/: 404.html  index.html  sitemap.xml
v1.2.1/: 404.html  index.html  sitemap.xml
v1.3.0/: 404.html  index.html  sitemap.xml
v1.3.1/: 404.html  index.html  sitemap.xml
v1.3.2/: 404.html  index.html  sitemap.xml
v1.4.0/: 404.html  index.html  sitemap.xml  versions.json
v1.4.0b1/: 404.html  index.html  sitemap.xml
v1.4.0b2/: 404.html  index.html  sitemap.xml  versions.json
v1.4.1/: 404.html  index.html  sitemap.xml
v1.4.2/: 404.html  index.html  sitemap.xml  versions.json
v1.4.3/: 404.html  index.html  sitemap.xml  versions.json
v1.5.0/: 404.html  index.html  sitemap.xml
v1.5.1/: 404.html  index.html  sitemap.xml  versions.json
(+844 files in other folders)
