[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingview-scraper"
version = "0.4.20"
description = "Tradingview scraper tool"
authors = [
    {name = "Mostafa Najmi", email = "m.n.irib@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["tradingview", "scraper", "python", "crawler", "financial"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests>=2.32.4",
    "pandas>=2.0.3",
    "beautifulsoup4>=4.12.3",
    "pydantic>=2.8.2",
    "websockets>=13.1",
    "websocket-client>=1.8.0",
    "python-dotenv>=1.0.1",
    "toml>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/mnwato/tradingview-scraper"
Repository = "https://github.com/mnwato/tradingview-scraper"
Download = "https://github.com/mnwato/tradingview-scraper/archive/refs/tags/0.4.9.zip"

[tool.setuptools.packages.find]
include = ["tradingview_scraper*"]

[tool.setuptools.package-data]
tradingview_scraper = [
    "data/areas.json",
    "data/exchanges.txt",
    "data/indicators.txt",
    "data/languages.json",
    "data/news_providers.txt",
    "data/timeframes.json",
]

[project.optional-dependencies]
test = ["pytest"]