[metadata]
name = tradingview-scraper
version = 0.4.21
description = A powerful Python library for scraping real-time market data, indicators, and ideas from TradingView.
long_description = file: README.md
long_description_content_type = text/markdown
author = Smit Kunpara
author_email = smitkunpara@gmail.com
url = https://github.com/smitkunpara/tv-scraper
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
